мои и все отчеты

--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@
   REACT_APP_MESSAGINGSENDERID = "1063565645469"
   REACT_APP_APPID = "1:1063565645469:web:d409b6f30d9e647f476674"
 
+  REACT_APP_ADMIN = 'zgG8W2QfMebOkLdBvXh49VG1TzB2'
  
